--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,10 @@
     <title>Java Enterprise (Topjava)</title>
 </head>
 <body>
-<h2>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h2>
+<h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
+<hr>
+<ul style="font-size: large">
+    <li><a href="users">Users</a></li>
+</ul>
 </body>
 </html>
